--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Webpage</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
+        <div class="nav-head">
+            <div class="icon" role="button">
+                <i class="fa fa-bars"></i>
+            </div>
+        </div>
+        <div class="link-holder">
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+        </div>
     </div>
 
     <!-- Hero section -->
@@ -103,5 +111,14 @@
         </div>
         <h6>Copyright &copy; 2021 Zuri Training.</h6>
     </div>
+
+<script>
+  const navToggle = document.querySelector('.icon');
+const linkContainer = document.querySelector('.link-holder');
+
+navToggle.addEventListener('click', () => {
+    linkContainer.classList.toggle('show-links')
+} )
+</script>
 </body>
 </html>
